// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell renders button for dead cell 1`] = `
.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 1px;
  text-align: center;
  box-sizing: border-box;
  background-color: #fff;
}

<button
  className="emotion-0"
  onClick={[Function]}
/>
`;

exports[`Cell renders button for live cell 1`] = `
.emotion-0 {
  width: 15px;
  height: 15px;
  border: 1px solid #000;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: 1px;
  text-align: center;
  box-sizing: border-box;
  background-color: #00ff00;
}

<button
  className="emotion-0"
  onClick={[Function]}
>
   
</button>
`;
